src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@placeholder_heavy.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 58
  ploc: 38
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 20
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.3448275862068966
size:
  words: 202
  effective_content_units: 0.8416666666666667
  sections: 9
  headings: 9
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 58
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
      - 5
      - 8
    word_count: 19
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 6
    end_line: 17
    parent_section_id: 0
    child_section_ids: []
    word_count: 42
    block_count: 6
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 18
    end_line: 26
    parent_section_id: 0
    child_section_ids: []
    word_count: 50
    block_count: 2
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 27
    end_line: 31
    parent_section_id: 0
    child_section_ids: []
    word_count: 12
    block_count: 1
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 32
    end_line: 38
    parent_section_id: 0
    child_section_ids: []
    word_count: 23
    block_count: 2
  - section_id: 5
    heading_level: 2
    heading_text: ~
    start_line: 39
    end_line: 51
    parent_section_id: 0
    child_section_ids:
      - 6
      - 7
    word_count: 21
    block_count: 1
  - section_id: 6
    heading_level: 3
    heading_text: ~
    start_line: 44
    end_line: 47
    parent_section_id: 5
    child_section_ids: []
    word_count: 8
    block_count: 1
  - section_id: 7
    heading_level: 3
    heading_text: ~
    start_line: 48
    end_line: 51
    parent_section_id: 5
    child_section_ids: []
    word_count: 9
    block_count: 1
  - section_id: 8
    heading_level: 2
    heading_text: ~
    start_line: 52
    end_line: 58
    parent_section_id: 0
    child_section_ids: []
    word_count: 18
    block_count: 6
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 10
  cognitive_complexity: 7.759999999999999
  halstead:
    operators_distinct: 9
    operators_total: 69
    operands_distinct: 144
    operands_total: 225
    vocabulary: 153
    length: 294
    volume: 2133.67202575164
    difficulty: 7.03125
    effort: 15002.381431066218
    embedded_volume: 0
    total_volume: 2133.67202575164
links:
  total: 7
  internal: 0
  relative: 7
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 6
  link_debt_score: 0.45
  information_scent_score: 0.2571428571428571
  review_burden: 20.6
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 82.92571428571428
  section_balance_score: 0.85
  good_scaffold_score: 0.03857142857142857
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0
  evidence_coverage_score: 0
ai_era:
  filler_lazy_structure_risk: 0.7300000000000001
  labels:
    - hollow-references
    - large-unanchored-prose
    - low-artifact-density
    - low-repository-grounding
    - placeholder-heavy
    - specificity-scarcity
  top_contributors:
    - - hollow-references
      - 1
    - - large-unanchored-prose
      - 1
    - - low-artifact-density
      - 1
review:
  review_criticality_index: 10.864285714285716
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 4
        language: en
      - start_line: 6
        end_line: 6
        language: en
      - start_line: 8
        end_line: 9
        language: en
      - start_line: 11
        end_line: 11
        language: en
      - start_line: 12
        end_line: 12
        language: en
      - start_line: 13
        end_line: 13
        language: en
      - start_line: 15
        end_line: 16
        language: en
      - start_line: 18
        end_line: 18
        language: en
      - start_line: 20
        end_line: 22
        language: en
      - start_line: 24
        end_line: 25
        language: en
      - start_line: 27
        end_line: 27
        language: en
      - start_line: 29
        end_line: 30
        language: en
      - start_line: 32
        end_line: 32
        language: en
      - start_line: 34
        end_line: 35
        language: en
      - start_line: 37
        end_line: 37
        language: en
      - start_line: 39
        end_line: 39
        language: en
      - start_line: 41
        end_line: 42
        language: en
      - start_line: 44
        end_line: 44
        language: en
      - start_line: 46
        end_line: 46
        language: en
      - start_line: 48
        end_line: 48
        language: en
      - start_line: 50
        end_line: 50
        language: en
      - start_line: 52
        end_line: 52
        language: en
      - start_line: 54
        end_line: 54
        language: en
      - start_line: 55
        end_line: 55
        language: en
      - start_line: 56
        end_line: 56
        language: en
      - start_line: 57
        end_line: 57
        language: en
      - start_line: 58
        end_line: 58
        language: en
  english:
    readability:
      flesch_reading_ease: 54.776
      flesch_kincaid_grade: 7.136
      gunning_fog: 8.477
      smog: 8.766
      ari: 6.411
      coleman_liau: 10.298
      dale_chall_new: 12.039
      dale_chall_list: ngsl-1.2
      forcast: 12.2
      lix: 33.691
      rix: 1.684
      ensemble_grade_band:
        - 6.411
        - 10.298
    lexical:
      mattr_50: 0.833
      hapax_ratio: 0.746
      dis_ratio: 0.141
      lexical_density: 0.685
      avg_sentence_words: 6.105
      p90_sentence_words: 14
      max_sentence_words: 21
      stddev_sentence_words: 4.57
      avg_word_chars: 5.263
      p90_word_chars: 9
      sentence_count: 38
      words_total: 232
    wording:
      passive_ratio: 0.105
      hedge_density: 0.009
      weasel_density: 0.009
      wordy_density: 0.004
      adverb_density: 0.004
      nominalization_density: 0.034
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: false
  japanese: ~
  meta:
    short_doc_warning: false
    words_counted: 232
    sentences_counted: 38
    blocks_stripped:
      - code
