src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@pure_prose.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 7
  ploc: 4
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 3
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.42857142857142855
size:
  words: 27
  effective_content_units: 0.1125
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 7
    parent_section_id: ~
    child_section_ids: []
    word_count: 27
    block_count: 3
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 0
  halstead:
    operators_distinct: 3
    operators_total: 5
    operands_distinct: 24
    operands_total: 30
    vocabulary: 27
    length: 35
    volume: 166.42106257572138
    difficulty: 1.875
    effort: 312.0394923294776
    embedded_volume: 0
    total_volume: 166.42106257572138
maintainability:
  documentation_maintainability_index: 100
