src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@readme_en.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 32
  ploc: 21
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 11
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.34375
size:
  words: 150
  effective_content_units: 0.625
  sections: 5
  headings: 5
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 32
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
    word_count: 22
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 7
    end_line: 11
    parent_section_id: 0
    child_section_ids: []
    word_count: 20
    block_count: 1
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 12
    end_line: 20
    parent_section_id: 0
    child_section_ids: []
    word_count: 46
    block_count: 2
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 21
    end_line: 28
    parent_section_id: 0
    child_section_ids: []
    word_count: 45
    block_count: 2
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 29
    end_line: 32
    parent_section_id: 0
    child_section_ids: []
    word_count: 17
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 4
  cognitive_complexity: 0.2
  halstead:
    operators_distinct: 4
    operators_total: 23
    operands_distinct: 127
    operands_total: 156
    vocabulary: 131
    length: 179
    volume: 1258.9827172752036
    difficulty: 2.456692913385827
    effort: 3092.9339196052247
    embedded_volume: 0
    total_volume: 1258.9827172752036
maintainability:
  documentation_maintainability_index: 100
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
      - start_line: 7
        end_line: 7
        language: en
      - start_line: 9
        end_line: 10
        language: en
      - start_line: 12
        end_line: 12
        language: en
      - start_line: 14
        end_line: 16
        language: en
      - start_line: 18
        end_line: 19
        language: en
      - start_line: 21
        end_line: 21
        language: en
      - start_line: 23
        end_line: 24
        language: en
      - start_line: 26
        end_line: 27
        language: en
      - start_line: 29
        end_line: 29
        language: en
      - start_line: 31
        end_line: 32
        language: en
  english:
    readability:
      flesch_reading_ease: 43.453
      flesch_kincaid_grade: 8.96
      gunning_fog: 10.272
      smog: ~
      ari: 9.258
      coleman_liau: 13.911
      dale_chall_new: 10.365
      dale_chall_list: ngsl-1.2
      forcast: 13.2
      lix: 48.117
      rix: 2.909
      ensemble_grade_band:
        - 8.96
        - 13.911
    lexical:
      mattr_50: 0.864
      hapax_ratio: 0.85
      dis_ratio: 0.1
      lexical_density: 0.673
      avg_sentence_words: 7.091
      p90_sentence_words: 12
      max_sentence_words: 16
      stddev_sentence_words: 4.067
      avg_word_chars: 5.769
      p90_word_chars: 9
      sentence_count: 22
      words_total: 156
    wording:
      passive_ratio: 0.091
      hedge_density: 0.019
      weasel_density: 0
      wordy_density: 0.006
      adverb_density: 0.006
      nominalization_density: 0.058
      expletive_count: 1
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: false
  japanese: ~
  meta:
    short_doc_warning: false
    words_counted: 156
    sentences_counted: 22
    blocks_stripped: []
