src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@table_large.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 14
  ploc: 4
  cloc: 0
  tloc: 8
  mloc: 0
  bloc: 2
  aloc: 8
loc_ratios:
  artifact_line_ratio: 0.5714285714285714
  code_line_ratio: 0
  table_line_ratio: 0.5714285714285714
  math_line_ratio: 0
  blank_line_ratio: 0.14285714285714285
size:
  words: 36
  effective_content_units: 5.61
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 91
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 14
    parent_section_id: ~
    child_section_ids: []
    word_count: 36
    block_count: 2
complexity:
  reading_path_complexity: 2
  reading_path_complexity_raw: 2
  cognitive_complexity: 1.3219413178184862
  halstead:
    operators_distinct: 6
    operators_total: 27
    operands_distinct: 46
    operands_total: 52
    vocabulary: 52
    length: 79
    volume: 450.33473773314626
    difficulty: 3.391304347826087
    effort: 1527.2221540515395
    embedded_volume: 0
    total_volume: 450.33473773314626
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 1
  max_cells: 91
  table_burden_score: 0.2861378205128205
  table_scaffold_score: 0.7416666666666667
  hard_warnings: 1
maintainability:
  documentation_maintainability_index: 100
  section_balance_score: 0
  good_scaffold_score: 0
  artifact_debt_score: 0
artifacts:
  - id: 0
    kind: table
    start_line: 7
    end_line: 14
    language_tag: ~
    size: 91
    has_explanation: true
    has_label: true
    oversized: false
    burden: 0.2861378205128205
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.821
      hapax_ratio: 0.844
      dis_ratio: 0.094
      lexical_density: 0.692
      avg_sentence_words: 13
      p90_sentence_words: 28
      max_sentence_words: 28
      stddev_sentence_words: 10.801
      avg_word_chars: 4.282
      p90_word_chars: 7
      sentence_count: 3
      words_total: 39
    wording:
      passive_ratio: 0
      hedge_density: 0.026
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0.026
      nominalization_density: 0
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.972
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 39
    sentences_counted: 3
    blocks_stripped:
      - table
