src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@table_mixed.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 10
  ploc: 3
  cloc: 0
  tloc: 4
  mloc: 0
  bloc: 3
  aloc: 4
loc_ratios:
  artifact_line_ratio: 0.4
  code_line_ratio: 0
  table_line_ratio: 0.4
  math_line_ratio: 0
  blank_line_ratio: 0.3
size:
  words: 12
  effective_content_units: 0.5900000000000001
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 9
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 10
    parent_section_id: ~
    child_section_ids: []
    word_count: 12
    block_count: 3
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 0.7265624999999999
  halstead:
    operators_distinct: 5
    operators_total: 10
    operands_distinct: 17
    operands_total: 18
    vocabulary: 22
    length: 28
    volume: 124.86408532184433
    difficulty: 2.6470588235294117
    effort: 330.5225787931173
    embedded_volume: 0
    total_volume: 124.86408532184433
maintainability:
  documentation_maintainability_index: 100
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 3
        language: en
      - start_line: 10
        end_line: 10
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.8
      hapax_ratio: 0.833
      dis_ratio: 0.083
      lexical_density: 0.733
      avg_sentence_words: 5
      p90_sentence_words: 7
      max_sentence_words: 7
      stddev_sentence_words: 1.633
      avg_word_chars: 5.2
      p90_word_chars: 8
      sentence_count: 3
      words_total: 15
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 15
    sentences_counted: 3
    blocks_stripped:
      - table
