src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@tateishi_sample.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 23
  ploc: 12
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 11
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.4782608695652174
size:
  words: 52
  effective_content_units: 0.21666666666666667
  sections: 6
  headings: 6
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 23
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
      - 5
    word_count: 5
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 5
    end_line: 8
    parent_section_id: 0
    child_section_ids: []
    word_count: 6
    block_count: 1
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 9
    end_line: 12
    parent_section_id: 0
    child_section_ids: []
    word_count: 9
    block_count: 1
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 13
    end_line: 16
    parent_section_id: 0
    child_section_ids: []
    word_count: 13
    block_count: 1
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 17
    end_line: 20
    parent_section_id: 0
    child_section_ids: []
    word_count: 10
    block_count: 1
  - section_id: 5
    heading_level: 2
    heading_text: ~
    start_line: 21
    end_line: 23
    parent_section_id: 0
    child_section_ids: []
    word_count: 9
    block_count: 1
prose:
  language_detection:
    dominant_language: ja
    blocks:
      - start_line: 1
        end_line: 1
        language: ja
      - start_line: 3
        end_line: 3
        language: ja
      - start_line: 5
        end_line: 5
        language: ja
      - start_line: 7
        end_line: 7
        language: ja
      - start_line: 9
        end_line: 9
        language: ja
      - start_line: 11
        end_line: 11
        language: ja
      - start_line: 13
        end_line: 13
        language: ja
      - start_line: 15
        end_line: 15
        language: ja
      - start_line: 17
        end_line: 17
        language: ja
      - start_line: 19
        end_line: 19
        language: ja
      - start_line: 21
        end_line: 21
        language: ja
      - start_line: 23
        end_line: 23
        language: ja
  english: ~
  japanese:
    script_composition:
      kanji_ratio: 0.366
      hiragana_ratio: 0.39
      katakana_ratio: 0.145
      latin_ratio: 0.089
      digit_ratio: 0.01
      script_entropy: 1.843
      visible_chars: 585
    readability:
      tateishi_rs: 27.779
      jouyou_grade_mean: 3.692
      hyougai_ratio: 0.009
    lexical:
      avg_sentence_chars: 32.105
      p90_sentence_chars: 61
      max_sentence_chars: 71
      comma_period_ratio: 1.769
      jukugo_density: 0.798
      sentence_count: 19
      char_count: 610
    wording:
      politeness_dominant: keitai
      keitai_count: 13
      jotai_count: 0
      honorific_count: 0
      keitai_jotai_mix_count: 0
      weak_phrase_count: 0
      redundant_expression_count: 0
      doubled_joshi_count: 14
      long_kanji_run_count: 0
      max_comma_violation_count: 0
      max_ten_violation_count: 1
      long_sentence_count: 0
      wording_quality_score: 0.83
    style_conformance:
      violations:
        - rule: rule-3-jouyou-only
          severity: warn
          count: 2
        - rule: rule-5-trailing-chouonpu
          severity: warn
          count: 3
      total_violations: 5
      violation_density_per_1000: 8.547
    short_doc_warning: false
  meta:
    short_doc_warning: false
    words_counted: 610
    sentences_counted: 19
    blocks_stripped: []
